--- a/src/assets/scss/components/_reset.scss
+++ b/src/assets/scss/components/_reset.scss
@@ -1,4 +1,6 @@
+@import "./fonts";
 @import "./mixin";
+@import "./const";
 
 *,
 *::after,
@@ -120,24 +122,6 @@ ul {
   list-style: none;
 }
 
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-results-button,
@@ -176,10 +160,6 @@ a:hover {
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
-}
-
-figure {
-  margin: 0;
 }
 
 form {
