--- a/src/assets/scss/components/_const.scss
+++ b/src/assets/scss/components/_const.scss
@@ -1,12 +1,30 @@
 @import "./fonts";
 @import "./mixin";
-@import "./const";
+@import "./variables";
 
-.aside-title {
-  @include font($size-title_aside, 400 "PT_Sans");
-  letter-spacing: 0.5px;
+.aside {
+  width: 137px;
+  height: 100%;
 
-  color: $color-white;
+  @include displayFlex(flex-end, flex-end, column);
+
+  background-color: $color-active;
+
+  position: relative;
+
+  &-title {
+    @include font($size-title_aside, 400, "PT_Sans");
+    letter-spacing: 0.5px;
+
+    color: $color-white;
+    transform: rotate(-90deg);
+
+    position: absolute;
+    right: -45px;
+    bottom: 74.5px;
+
+    white-space: nowrap;
+  }
 }
 
 .main-title {
@@ -17,25 +35,320 @@
   color: $color-main_text;
 }
 
-.input-label {
-  @include font($size-label_input, 300);
-
-  color: $color-label_input;
-}
-
-.input-text {
-  @include font($size-input_text, 400);
-
-  color: $color-main_text;
-}
-
 .btn {
   @include displayFlex(center, center, column);
   padding: 7px 25px;
 
   background-color: $color-btn;
 
-  @include font($size-btn_text, 400 "PT_Sans");
+  @include font($size-btn_text, 400, "PT_Sans");
 
   color: $color-white;
+
+  transition: background-color linear 0.2s;
+
+  &:active,
+  &:focus,
+  &:focus-within,
+  &:target,
+  &:hover,
+  &:visited,
+  &:focus-visible {
+    background-color: $color-hover;
+    outline: thin dotted;
+  }
+}
+
+.input {
+  &-component {
+    @include displayFlex(flex-start, flex-start, column);
+    gap: 1px;
+
+    max-width: 235px;
+    width: 100%;
+
+    position: relative;
+
+    &__wrap {
+      @include displayFlex(center, flex-start);
+
+      &-radio {
+        @include displayFlex(center, center);
+        gap: 20px;
+      }
+    }
+  }
+
+  &-label {
+    @include font($size-label_input, 300);
+
+    color: $color-label_input;
+  }
+
+  &-input {
+    padding-bottom: 5px;
+    padding-right: 25px;
+
+    width: 100%;
+    border-bottom: 0.7px solid $color-border_input;
+
+    transition: border-bottom linear 0.2s;
+
+    &:active,
+    &:focus,
+    &:focus-within,
+    &:target,
+    &:hover,
+    &:visited,
+    &:focus-visible {
+      border-bottom: 0.7px solid $color-active;
+    }
+
+    &_incorrect {
+      border-bottom: 0.7px solid $color-error;
+    }
+  }
+
+  &-text {
+    &_incorrect {
+      color: $color-error;
+    }
+  }
+
+  &-radio {
+    position: absolute;
+    opacity: 0;
+
+    &:checked + label {
+      &:before {
+        background-color: $color-radio_btn;
+        box-shadow: inset 0 0 0 2px white;
+      }
+    }
+    &:focus + label {
+      &:before {
+        outline: none;
+      }
+    }
+
+    &:disabled + label {
+      &:before {
+        box-shadow: inset 0 0 0 4px white;
+        border-color: darken(white, 25%);
+        background: darken(white, 25%);
+      }
+    }
+
+    &_text {
+      @include font($size-input_text, 400);
+
+      color: $color-main_text;
+
+      display: inline-block;
+
+      cursor: pointer;
+
+      position: relative;
+
+      user-select: none;
+
+      padding-left: 18px;
+
+      &::before {
+        content: "";
+
+        display: inline-block;
+
+        width: 12px;
+        height: 12px;
+
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+
+        transition: all 250ms ease;
+
+        vertical-align: top;
+
+        cursor: pointer;
+
+        border-radius: 50%;
+        border: 1px solid $color-radio_btn;
+      }
+
+      &:empty {
+        &:before {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
+  &-correct {
+    display: none;
+
+    width: 11px;
+    height: 8px;
+
+    position: absolute;
+
+    bottom: 10px;
+    right: 0;
+
+    background-image: url(../assets/images/icon-correct.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  &-select {
+    position: relative;
+
+    &[data-state="active"] {
+      .input {
+        &-select__title {
+          &::before {
+            transform: translate(-3px, -50%) rotate(-45deg);
+          }
+
+          &::after {
+            transform: translate(3px, -50%) rotate(45deg);
+          }
+        }
+        &-select__content {
+          opacity: 1;
+        }
+
+        &-select__label + .__select__input + .__select__label {
+          max-height: 40px;
+          border-top-width: 1px;
+        }
+      }
+    }
+    &__title {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      padding: 8px 16px;
+
+      border-radius: 5px;
+      border: solid 1px #c7ccd1;
+
+      cursor: pointer;
+
+      &::before,
+      &::after {
+        content: "";
+
+        position: absolute;
+        top: 50%;
+        right: 16px;
+
+        display: block;
+        width: 10px;
+        height: 2px;
+
+        transition: all 0.3s ease-out;
+
+        background-color: #333333;
+
+        transform: translate(-3px, -50%) rotate(45deg);
+      }
+      &::after {
+        transform: translate(3px, -50%) rotate(-45deg);
+      }
+
+      &:hover {
+        border-color: #d8093a;
+
+        &::before,
+        &::after {
+          background-color: #d8093a;
+        }
+      }
+    }
+    &__content {
+      position: absolute;
+      top: 40px;
+      left: 3px;
+
+      display: flex;
+      flex-direction: column;
+      width: calc(100% - 6px);
+
+      background-color: #ffffff;
+
+      border: 1px solid #c7ccd1;
+      border-top: none;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+
+      transition: all 0.3s ease-out;
+
+      opacity: 0;
+      z-index: 8;
+    }
+    &__input {
+      display: none;
+
+      &:checked + label {
+        background-color: #dedede;
+      }
+      &:disabled + label {
+        opacity: 0.6;
+        pointer-events: none;
+      }
+    }
+    &__label {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 40px;
+      max-height: 0;
+      padding: 0 16px;
+
+      transition: all 0.2s ease-out;
+
+      cursor: pointer;
+
+      overflow: hidden;
+
+      & + input + & {
+        border-top: 0 solid #c7ccd160;
+      }
+
+      &:hover {
+        background-color: #d8093a !important;
+
+        color: #ffffff;
+      }
+    }
+  }
+
+  .reset {
+    display: flex;
+    width: 230px;
+    padding: 8px 16px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+
+    border: solid 1px #c7ccd1;
+    border-radius: 5px;
+
+    transition: all 0.2s ease-out;
+
+    cursor: pointer;
+
+    font-weight: bold;
+
+    background-color: #ffffff;
+    color: #333333;
+
+    &:hover {
+      background-color: #d8093a;
+      color: #ffffff;
+    }
+  }
 }
