--- a/src/assets/scss/components/_reset.scss
+++ b/src/assets/scss/components/_reset.scss
@@ -1,6 +1,4 @@
 @import "./fonts";
-@import "./mixin";
-@import "./const";
 
 *,
 *::after,
@@ -173,12 +171,20 @@ textarea {
   font-size: 100%;
   margin: 0;
   vertical-align: baseline;
-  *vertical-align: middle;
 }
 
 button,
 input {
   line-height: normal;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background: unset;
+}
+
+input {
+  cursor: auto;
 }
 
 button,
@@ -192,7 +198,6 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
-  *overflow: visible;
 }
 
 button[disabled],
@@ -204,8 +209,6 @@ input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
-  *height: 13px;
-  *width: 13px;
 }
 
 input[type="search"] {
@@ -263,14 +266,6 @@ textarea {
   resize: vertical;
 }
 
-button {
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
-  border: none;
-  background: unset;
-}
-
 html {
   font-size: 100%;
 
@@ -278,7 +273,7 @@ html {
   -ms-text-size-adjust: 100%;
   scroll-behavior: smooth;
 
-  font: normal 300 14 / normal "WorkSans";
+  font: 300 14px / normal "WorkSans";
 }
 
 body {
