--- a/src/assets/scss/components/_variables.scss
+++ b/src/assets/scss/components/_variables.scss
@@ -11,6 +11,7 @@ $color-label_input: #7c7c7c;
 $color-black: #000000;
 $color-white: #fff;
 $color-active: #5a61ed;
+$color-hover: #272da8;
 $color-btn: #5a61ed;
 $color-radio_btn: #5a61ed;
 $color-error: #ff2828;
